--- a/paper.tex
+++ b/paper.tex
@@ -38,9 +38,19 @@
 
 \maketitle
 \begin{abstract}
-The current density in a of Porous Silicon (PSi) with gradient  refractive index (GRIN) produced  by an electrochemical  attack on silicon (Si)  to  produce  porous  silicon (PSi), the calculated  porosity  of the GRIN structure depends  on the  position  and  distance  from  counter  electrode.   The proposed relationship shows, the  counter  electrode tip that acts  analogously  as a point charge  and  current density  for a geometry in an electrolytic  box by solving the electrostatic equations  with suitable  contour conditions.  Resulting  in an electrostatic model for photonic  crystals  with gradient refractive index (EMPCGRIN). The characterization of the  silicon structures was performed  by scanning electron microscopy   and  UV-Vis-NIR reflectance spectroscopy.  The obtained  results  open  the  possibility  of creating  silicon-based photonic  structures within  the  Visible-IR- range, within  the  sample at  different measuring distances,  where generally porous silicon does not strongly  absorb or disperse light.  Similarly, in the UV-Visible range  there is a strong absorption with more of light scattering. Having a greater  area of attack generating  different pores sizes and their porosity, and making an easy calculation  in the manufacture of porous silicon. \\
+We propose a simple setup which allows the calculation of the current
+density as a function of position within an electrochemical cell used
+to produce porous Silicon structures with a controlled gradient in their
+index of refraction. We produced samples under several conditions and
+characterized them with scanning electron microscopy, and
+ultraviolet-visible-near infrared reflectance spectroscopy. Our
+results allow us to obtain from experiments on a single or just a few
+samples a full characterization of the dependence of porosity,
+dielectric function and speed of attack on the current density and on
+position, so that novel nonhomogeneous devices may be designed and
+built.
 
-Keywords: Porous Silicon (PSi); Monolayer(Ml); Porosity(P); Reflectance Spectra.
+Keywords: Porous Silicon; GRIN; Reflectance Spectra.
 \end{abstract}
 
 
