Fix a few latex mistakes

--- a/paper.tex
+++ b/paper.tex
@@ -440,7 +440,7 @@ T=\frac{\eta_m}{\eta_0}|t|^{2}
       different regions as mentioned above. }}
     \label{fig:DE1}
   \end{figure}
-\end{document}
+
 In the Fig. \ref{fig:DE1} a shows schematic representation of the
 experimental setup where porous silicon can be manufactured with GRIN,
 taking into account the considerations of the electrode as tip, the
@@ -617,7 +617,7 @@ the attack would be and the formal side of the pores in the silicon.
 \subsection{Monolayers GRIN Porous Silicon }
 \begin{figure}
 	\centering
-	\includegraphics[scale=.3]{../Images/celdan2}
+	\includegraphics[scale=.3]{Images/celdan2}
 	\caption{\emph{ Mechanical 3D modeling, design of the
             electrochemical cell where we can see the shape of a prism
             giving the required and necessary data for the
@@ -857,7 +857,7 @@ below the tip counter-electrode.
   \label{fig:MCGRIN3}
 \end{figure}
 
-\begin{table}[H]
+\begin{table}
   \centering
   \begin{tabular}{|c|c|c|c|c|c|c|}
     \hline
