--- a/paper.tex
+++ b/paper.tex
@@ -5,11 +5,13 @@
 %\usepackage{float}
 %\usepackage{cite}% para contraer referencias
 %\usepackage[usenames]{color}
+\usepackage{bm}
 \newcommand{\abs}[1]{\lvert#1\rvert}
 \usepackage{xcolor}
-\newcommand{\notaL}[1]{{\color{blue}L:#1}}
-\title{\textbf{Optimization of Porous Silicon (PSi) with gradient refractive index (GRIN): A comparison with computational schemes with experimental results } }
-
+\newcommand{\notaL}[1]{{\color{blue}+L:#1+}}
+\title{\textbf{Optimization of Porous Silicon Gradient Refractive
+    Index Structures.} }
+% A comparison with computational schemes with experimental results
 \author[1]{C. A. Ospina de la Cruz}
 \author[2]{W. L. Mochán }
 \author[3]{V. Agarwal }
@@ -51,14 +53,15 @@ built.
 Keywords: Porous Silicon; GRIN; Reflectance Spectra.
 \end{abstract}
 \notaL{Cambié el abstract, pero habrá que revisarlo después.}
- \section{Introduction}
+\section{Introduction}
 
-The structural behavior of nanostructured materials  has  become a
-topic  of global  interest,  where numerous  research has been
-done so far \cite{I1}. We found a great way to go for future
+\notaL{No entiendo nada de la introducción}
+The structural properties of nanostructured materials  has  received a
+considerable attention,  and a large research effort has been devoted
+to them \cite{I1}. We found a great way to go for future
 technological  explorations,  countless  challenges and  that  open a
 range of possibilities to develop further  study  on these
-issues\cite{I2}. Porous silicon (PSi) is a versatile nanostructured
+issues\cite{I2}. Porous silicon (PS) is a versatile nanostructured
 material and an excellent candidate as a technological platform for
 different sensing applications \cite{I3, I4}, due to its easy
 manufacturing,  large surface area, high surface reactivity,  and
@@ -69,7 +72,7 @@ studies for high reflectivity and the ability to adjust  the photonic
 prohibited  band (PBG)\cite{I6} , which leads to possible applications
 such as filters\cite{I7}, optical switches\cite{I8}, omnidirectional
 mirrors\cite{I9}, waveguides for PC \cite{I10} etc. In the
-conventional manufacturing of PSi the desired result  is to obtain
+conventional manufacturing of PS the desired result  is to obtain
 homogeneous samples (same structural characteristics) from the
 periphery  to the center  of the electrochemically  attacked area.
 However, with an asymmetric anodizing configuration,  samples with a
@@ -97,7 +100,7 @@ technique is required allowing the identification and separation of
 these biological compounds \cite{I15}. Recent studies  have shown that
 the  combination  of thermal  oxidation  and infiltration of TiO2   by
 ALD offers the  opportunity to manufacture  a high index of refraction
-of contrast, visibly transparent GRIN optical elements from PSi
+of contrast, visibly transparent GRIN optical elements from PS
 absorbent structures \cite{I16}. A Despite previous research on the
 formation of porous silicon with GRIN, type p in manufacturing and
 characterization, there was no control of current densities, much less
@@ -126,50 +129,166 @@ experimental results followed. Finally,  the conclusions given in
 Section. 5
 
 \section{Theory}
-\subsection{Electrostatic Model for Photonic Crystals with Gradient
-  Refraction Index (EMPCGRIN)}
+\subsection{Calculation of the current density}
+\notaL{check where acronyms are first defined}
+A gradient in the optical properties of porous Silicon (PS) systems may be
+obtained by electrochemically attacking a Si surface with a position dependent current
+density ${\bm j(\bm r)}$, as the porosity and refractive index depend on
+the current density, as well as the speed of attack and the width of the
+porous layer. Nevertheless, it is not a simple to task to measure the
+{\em local} value of $\bm j(\bm r)$ along the surface. This hampers the
+design and optimization of well characterized reproducible GRIN PS
+structures. Thus, a system for which the current density field may be
+easily computed would be useful.
+Though $\bm j(\bm r)$ may be in principle be numerically calculated for a
+given arbitrary experimental setup,  here we propose a particularly
+simple setup that allows an expression for the current in terms
+of a series that is rapidly convergent and each of whose terms is a
+simple analytic function. With this setup it is easy to characterize
+the dependence of different properties of interest on the current, and
+this allows the design and optimization of diverse GRIN PS devices.
 
-The calculate  current density in a GRIN structure produced by an
-electrochemical attack on Si to produce Porous Si with a
-position-dependent porosity due to the distance to the counter
-electrode. A simplifies  calculation  with geometry,
-assumimg  in the form of a whole prism on the sides a, b, c with a, b
-horizontal and c vertical. Here c considered as the height of the
-liquid, and the walls are insulating, but the bottom is completely
-covered with the sample, which act as good conductor. The electrode is
-a thin insulated cable with tip, which  a point  current source.
+We assume that our electrolytic cell has the shape of a
+prism (see Fig. \ref{f:celda}) with a horizontal rectangular base of sides $a$ and $b$, and
+filled with the electrolyte up to a height $c$. We assume that the
+walls of the cell are insulating while the bottom is completely
+covered with the sample, which is a good conductor which is
+electrically grounded. Within the electrolyte we position an electrode
+which we assume is a thin conductor, insulated from the electrolyte
+but for a small area near its tip, which we thus approximate as a
+point current source.
 \begin{figure}
   \centering
   \includegraphics[scale=.4]{Images/celdan}
-  \caption{\emph{Diagram of the Electrolytic cell where we can see the shape of a prism on the sides a, b, c with a, b horizontal and c vertical. I'll take as the height of the liquid. The walls are insulating, but the bottom is completely covered by the sample, I suppose it is a good conductor. The tip of the electrode is a thin insulated wire located at $ \vec{r}_0 $.}}
+  \caption{Prism shaped electrolytic cell with a rectangular base of
+    sides $a$, $b$ filled with electrolyte up to a height $c$. The
+    walls of the cell are insulating and the bottom is completely
+    covered by the sample, which is assumed to be a good
+    conductor. The tip of the electrode is a thin insulated wire with
+    just the tip uncovered and located at $ \vec{r}_0 $ within the
+    liquid.\notaL{Quité el tipo de letra del pie de figura. Que la pongan en la
+      revista.}\notaL{En la punta pusiste dos esferas. Quítalas y sólo
+    pon un puntito dorado del ancho del cable. Muestra que la base
+    está aterrizada}\notaL{Indica el voltaje y la
+    corriente}\notaL{¿Está bien la polaridad de la batería?}}
+  \label{f:celda}
 \end{figure}
-The current in the electrolyte is $ \vec {J} = \sigma \vec{E} $ with $
-\sigma $ is the conductivity. This for the stationary case $
-\bigtriangledown \cdot \vec{j} = 0 $. The electric field is derived
-from the electric potential, $\vec {E} = - \bigtriangledown \varphi
-$.
-And we can say that $ \bigtriangledown^{2} \varphi = 0 $, since the
-sample is a relatively good conductor, when connected to earth $
-\varphi(x, y, 0) = 0 $. Integrating $ \vec{J} $ over a small sphere
-superimposing the electrode gives $ \int ds \cdot \vec{J} = I $.
-The current density that carries the current to the tip. So
+Within the electrolyte the current density is
 \begin{equation}
-  \int ds \cdot \vec{E} = \dfrac{I}{\sigma}
+  \label{eq:j}
+  \bm j=\sigma\bm E,
 \end{equation}
-The problem to be solved is thus, to obtain the potential produced by a point charge,
+with
+$\sigma$ the conductivity, $\bm E=-\nabla\varphi$ the electric field,
+and $\varphi$ the electric potential. For a
+stationary situation\notaL{Latex usa nabla como el nombre de
+  $\nabla$}
+$\nabla\cdot \bm j = \sigma\nabla\cdot\bm E=0$. Thus, within the electrolyte,
 \begin{equation}
-  q_{_{0}} = \dfrac{I}{4 \pi \sigma}
+  \label{eq:laplace}
+\nabla^{2} \varphi=0.
 \end{equation}
-In the positions$\vec{r}_{_{0}}=(x_{_{0}}, y_{_{0}}, z_{_{0}})$ is the
-tip of the electrode that is in the presence of a ground conductor
-plane grounded $ z = 0 $ and enclosed on the insulating walls at $ (0,
-y, z) $, $ (a, y, z) $, $ (x, 0, z) $ , $ (x, b, z) $. The surface of
-the liquid is also not conductive to $ (x, y, c) $, the normal current
-is $\vec{j} \cdot \hat{n}=0$ and the normal of the field is $ \vec{E}
-\cdot \hat{n}=0  $. i.e
+Consider now an arbitrary closed surface
+$\mathcal S$
+within the electrolyte that surrounds completely the tip of the
+electrode. Integrating $ \bm j$ over this surface we obtain
 \begin{equation}
-E_{_{x}}(0, y ,z)= E_{_{x}}(a, y ,z)=E_{{_y}}(x, 0 ,z)=E_{{_y}}(x, b ,z)=E_{{_z}}(x, y ,c)=0
+  \label{eq:I}
+\int_{\mathcal S'} d\bm a \cdot \bm j = I,
 \end{equation}
+where the prime on $\mathcal S'$ means we remove from the surface a
+very small hole through which the wire that feeds the current gets
+through. Assuming the wire is narrower than any other relevant
+distance in the system, we may interpret Eq. \eqref{eq:I} as an
+integral over a closed surface of the current \eqref{eq:j} within the
+electrolyte, ignoring the actual current within the wire. Thus
+\begin{equation}
+  \label{eq:gauss}
+  \int_{\mathcal S} d\bm a \cdot \bm E = \frac{I}{\sigma}
+\end{equation}
+Using Gauss's law, we interpret this equation as a source for the
+potential in the form of a point charge
+\begin{equation}
+  q_{_{0}} = \frac{I}{4 \pi \sigma}
+\end{equation}
+at the position $\vec{r}_{_{0}}=(x_{_{0}}, y_{_{0}}, z_{_{0}})$ of the
+tip of the electrode. Note that $q_0$ would be the total charge,
+and it shouldn't be further screened through the permittivity of the
+electrolyte.
+
+The effective conductivity of the relatively thin sample in contact
+with the grounded counterelectrode is large enough that we may assume its
+surface $z=0$ is an equipotential.
+On the other hand, no current can go across the insulating walls of
+the cell, situated at $x=0$, $x=a$,, $y=0$ and $y=b$, nor through the
+free surface of the liquid at $z=c$. Thus, the problem to solve is Poisson
+equation with a point charge source
+\begin{equation}
+  \label{eq:poisson}
+  \nabla^2\varphi=-4\pi q_0\delta(\bm r-\bm r_0),
+\end{equation}
+with mixed boundary conditions
+\begin{equation}
+  \label{eq:ground}
+  \varphi(x,y,0)=0,
+\end{equation}
+and
+\begin{equation}
+E_{_{x}}(0, y ,z)= E_{_{x}}(a, y ,z)=E_{{_y}}(x, 0 ,z)=E_{{_y}}(x, b
+,z)=E_{{_z}}(x, y ,c)=0.
+\end{equation}
+This problem may be solved readily using image charge theory
+\notaL{ref}. The potential within the electrolytic cell coincides the
+the field within an infinite vacuum containing the point charge
+$q_0$ at the tip of the electrode at $\bm r_0$, and an array of its fictitious image
+charges. The images include a reflection on the conducting bottom of the
+cell, of the opposite charge $-q_0$ and situated at $(x_0, y_0,-z_0)$,
+to guarantee that the bottom stays at potential zero.
+There are further images on the four walls of the cell, of the same charge $q_0$
+and situated at $(-x_0,Y_0,z_0)$, $(x_0,-y_0, z_0)$, $(2a-x_0, y_0,
+z_0)$ and $(x_0, 2b-y_0,z_0)$ to guarantee that no current goes across
+them. Similarly, there is an image of the same charge $q_0$ at
+$(x_0,y_0,2c-z_0)$ to guarantee that no current goes across the
+surface of the electrolyte. Furthermore, each image charge has to be
+further reflected by each of the aforementioned surfaces, yielding new
+images.
+\begin{figure}
+  \centering
+  \includegraphics[width=\textwidth]{paper-1}
+  \caption{Top view of the electrolytic cell (light blue) showing the charge at the
+    tip of the electrode (red dot) and its images on the walls of the
+    rectangular cell, the images of its images and so on (blue dots). The walls are at $x=0,a$,
+    $y=0,b$. The relation of some charges and their images is
+    indicated by dashed arrows, with a bar to indicate the
+    corresponding reflecting wall. The system may be interpreted as a
+    periodic lattice with a rectangular unit cell of size $2a\times 2b$,
+    one of which is indicated  by wide dashed lines, and with a basis of four equal
+    charges at $(\pm x_0, \pm y_0, z_0)$.}
+  \label{fig:topview}
+\end{figure}
+In Fig. \ref{fig:topview} we illustrate the real charge and all of
+its images within the plane $z=z_0$. They form a periodic rectangular
+lattice with a unit cell of size $2a\times 2b$ and with a basis of
+four equal charges situated at the positions $\bm r_0$, $\bm
+r_1=(-x_0, y_0, z_0)$, $\bm r_2=(x_0, -y_0, z_0)$ and $\bm r_3=(-x_0,
+-y_0, z_0)$. In Fig. \ref{fig:sideview} we show a lateral view of the
+image charges.
+\begin{figure}
+  \centering
+  \includegraphics[width=\textwidth]{paper-2}
+  \caption{Side view of the electrolytic cell (light blue)
+    showing the charge at the tip of the electrode (red dot), its
+    images within the plane $z=z_0$ (blue dots), and its images at the
+    surface of the sample and the top of the electrolyte (green
+    dots). We use solid dots to denote particles with the same charge
+    as that corresponding to the tip $q_0$, and open dots for those of
+    opposite charge. The system may be interpreted as a periodic
+    lattice with a rectangular unit cell of size $2a\times 4c$, one of
+    which is indicated by wide dashed lines, and with a basis of four
+    charges $q_0$ and another four charges $-q_0$.}
+  \label{fig:sideview}
+\end{figure}
+
 This has a mixture of Dirichlet-Neumann type boundary conditions. By
 using the simplified prism geometry  can solve the problem using the
 theory of image loads. Each load has an image of the same sign and
@@ -216,7 +335,7 @@ automatically found in the plane making a sum of 2D Fourier.
 Where $ {R} $ is the 2D Bravais network and $ {G} $ its reciprocal
 network. It is written $ \phi (\vec{r}) = \displaystyle \sum _
 {\vec{G}}  \phi_{_{G}}(z) e^{i \vec {G} \cdot \vec {r}} $. So the
-Poisson equation $ \bigtriangledown^2 \phi = -4 \pi \displaystyle
+Poisson equation $ \nabla^2 \phi = -4 \pi \displaystyle
 \sum_{\vec{R}} \delta (\vec{r} - \vec{R} - \vec{r}_0) $.
 Becomes
  \begin{eqnarray}
@@ -481,8 +600,8 @@ was arranged in the form of a tip with an approximate diameter of ($
 \subsection{Reflectance Measurement}
 In the experiemental parte the reflectivity measurements were carried
 out with a Perkin Elmer Lambda 950 UV-Vis-NIR spectrophotometer. To
-calculate the complex refractive index $ \tilde{n}_{_{PSi}} = n_{_
-  {PSi}} - ik_{_{PSi}} $ of a porous layer with homogeneous porosity
+calculate the complex refractive index $ \tilde{n}_{_{PS}} = n_{_
+  {PS}} - ik_{_{PS}} $ of a porous layer with homogeneous porosity
 and thickness with smooth interfaces to throughout the entire
 structure, the more suitable is the adjustment procedure of the
 experimental reflectance or transmittance spectrum, this is for the
@@ -493,7 +612,7 @@ for single  smooth layer (monolayer).
 R=\dfrac{r _ {_ {01}}r _ {_ {12}} e^{-2i\delta}}{1+r _ {_ {01}}r _ {_ {12}} e^{-2i\delta}}
 \end{eqnarray}
 where $ r_{_ {01}} $ y $ r_{_ {12}} $ are the Fresnel reflectance
-coefficients at the interfaces $aire/PSi$ y $PSi/c-Si$ which are
+coefficients at the interfaces $aire/PS$ y $PS/c-Si$ which are
 defined in terms of their complex refractive index ($\tilde{n}_{_ {1}}
 $, $\tilde{n}_{_ {2}} $ y $ \tilde{n}_{_ {3}} $), for them
 $r_{_{ij}}=(\tilde{n}_{_{i}}\cos\theta_i-\tilde{n}_{_{j}}\cos\theta_j)/(\tilde{n}_{_{i}}\cos\theta_i+\tilde{n}_{_{j}}\cos\theta_j)$,
@@ -521,13 +640,13 @@ two materials (air and silicon), where it is assumed that all the
 pores or islands of the bulk material experience an average electric
 field; the equation is expressed as follows:
  \begin{eqnarray}\label{Eq:Brugg}
- p\dfrac{\varepsilon_{_{air}}-\varepsilon_{_{PSi}}}{\varepsilon_{_{air}}+\varepsilon_{_{PSi}}}+(1-p)\dfrac{\varepsilon_{_{Si}}-\varepsilon_{_{PSi}}}{\varepsilon_{_{Si}}+
-   \varepsilon_{_{PSi}}}
+ p\dfrac{\varepsilon_{_{air}}-\varepsilon_{_{PS}}}{\varepsilon_{_{air}}+\varepsilon_{_{PS}}}+(1-p)\dfrac{\varepsilon_{_{Si}}-\varepsilon_{_{PS}}}{\varepsilon_{_{Si}}+
+   \varepsilon_{_{PS}}}
  \end{eqnarray}
- where $ p $ is the volume fraction of air within the PSi layer
+ where $ p $ is the volume fraction of air within the PS layer
  (porosity); $\varepsilon_{_{air}}$ is the dielectric function of air;
  $\varepsilon_{_{Si}}$ is the dielectric function of c-Si, and
- $\varepsilon_{_{PSi}}$ represents the dielectric function of PSi. The
+ $\varepsilon_{_{PS}}$ represents the dielectric function of PS. The
  dielectric function is a complex number and is related to the complex
  refractive index ($\tilde{n} = n - ik$), which is made up of real and
  imaginary parts, as follows $\varepsilon=\tilde{n}^2$. Its real part
@@ -557,7 +676,7 @@ field; the equation is expressed as follows:
  Our proposal for the fabrication of porous silicon GRIN microcavities
  uses the same conditions for fabrications of porous silicon GRIN
  monolayers as in section 3.1, and taking the conventional data
- mentioned above. The porous silicon microcavities (PSiMC) with
+ mentioned above. The porous silicon microcavities (PSMC) with
  gradient refractive index (GRIN), were manufactured with different
  current densities ranging from $ 6 $ to $ 2.5 \ \ mA / cm ^ 2 $ for a
  current of $ 5 \ \ mA $, with high refractive index $n_{_{H}} \sim
@@ -582,7 +701,7 @@ field; the equation is expressed as follows:
   \caption{\emph{ Simulation to calculate the current density in
       a structure with gradient refractive index (GRIN) produced
       by electrochemical attack on crystalline silicon to
-      produce porous silicon (PSi), with a current density
+      produce porous silicon (PS), with a current density
       profile $ J (mA / cm ^ 2 ) $ normalized with the electric
       current $ I (mA) $, we have $ J / I \sim 0.5 \ \ a \ \ 1.2
       (cm^{-2}) $, for a cell of $ a = 2.03 \ \ cm $ y $ b =
@@ -659,7 +778,7 @@ all the needs that this required.
 \end{figure}
  The Fig. \ref{fig:DR3} a) three locations at different points are
  considered, denoted as follows, $ A (0.3 \ \ cm) $ and $ B (0.8 \ \
- cm) $ and $ C (1.7 \ \ cm) $, from the sample of PSi GRIN $ G1 (I = 5
+ cm) $ and $ C (1.7 \ \ cm) $, from the sample of PS GRIN $ G1 (I = 5
  mA) $. Also the Fig. \ref{fig:DR3}. b), we have the reflectance
  measurements to know the optical properties and the adjustments that
  were produced by means of the equation \ref{Eq:ECMR}. In the
@@ -687,7 +806,7 @@ all the needs that this required.
  considered the complex index and thus find the refractive index of
  the complex porous silicon with the purpose of determining the
  porosity and the experimental physical thickness (nm) by means of the
- SEM. The formation of PSi GRIN in the thickness occurs due to the
+ SEM. The formation of PS GRIN in the thickness occurs due to the
  variation in the concentration of the voids available at the Si
  electrolyte interface, therefore, an increase in the applied lateral
  current density increases the dimension of the pores and their
@@ -696,7 +815,7 @@ all the needs that this required.
 \begin{figure}
   \centering
   \includegraphics[scale=.5]{Images/semD11}
-  \caption{\emph{Characterization of a monolayer of PSi GRIN G1
+  \caption{\emph{Characterization of a monolayer of PS GRIN G1
       with an initial current of $ 5 \ \ mA $, seeing the
       morphology and depth of the cross section of several SEM
       micrographs, at different points, $ A (0.3 \ \ cm) $ and $
@@ -785,7 +904,7 @@ desired thickness $ d (J_i) $, calculate the attack time $ t $ (so, $
 t = v / d (J_i) $) and we can design any structure knowing the current
 density and the attack time. Fig. \ref{fig:Indr1} b) we find a
 relation of the porosity for each position with its determined current
-density. Therefore, if it is desired to manufacture a PSi monolayer of
+density. Therefore, if it is desired to manufacture a PS monolayer of
 a certain porosity with a certain end, it is enough to resort to the
 graphs of Fig. \ref{fig:Indr1} to determine the corresponding current
 density, attack speed and consequently the time, obtaining for that
@@ -845,7 +964,7 @@ below the tip counter-electrode.
   \includegraphics[scale=.5]{Images/MCGRIN2}
   \caption{\emph{a) Three locations at different points are
       considered, denoted as follows, $ A (0.3 \ \ cm) $ and $ B
-      (0.8 \ \ cm) $ and $ C (1.2 \ \ cm) $, from the PSiMCGRIN
+      (0.8 \ \ cm) $ and $ C (1.2 \ \ cm) $, from the PSMCGRIN
       sample $ GMC $. b) We have the reflectance measurements to
       know the optical properties with the proposed
       simulation. We were able to show that in a Porous Silicon
@@ -879,10 +998,10 @@ below the tip counter-electrode.
   \caption{ \emph{We have different points denoted as follows, $ A
       (0.3 \ \ cm) $ and $ B (0.8 \ \ cm) $ and $ C (1.2 \ \ cm) $,
       from the sample of a Porous Silicon Microcavity GRIN
-      (PSiMCGRIN) $ GMC $. Alternate layers of high refractive index
+      (PSMCGRIN) $ GMC $. Alternate layers of high refractive index
       (H) and low refractive index (L) are obtained at each of the
       measurement points (A, B and C). The refractive indexes of the
-      PSiMCGRIN were considered from the experimental and theoretical
+      PSMCGRIN were considered from the experimental and theoretical
       values that were obtained for the porosity ($ P =
       0.3J^{0.24}$). And we could obtain the attack time with the
       relation of $ V = 0.53J ^ {0.79} $ where $ t = d / V $.}}
@@ -890,7 +1009,7 @@ below the tip counter-electrode.
 \end{table}
 In Fig. \ref{fig:MCGRIN3} a) Three locations at different points are
 considered, denoted as follows, $ A (0.3 \ \ cm) $ , $ B (0.8 \ \ cm)
-$ and $ C (1.2 \ \ cm) $, from the PSiMCGRIN sample $ GMC $. Likewise,
+$ and $ C (1.2 \ \ cm) $, from the PSMCGRIN sample $ GMC $. Likewise,
 Fig. \ref{fig:DR3} b), we have the reflectance measurements to know
 the optical properties with the proposed simulation. We can see how
 from an experimental setup we have some important results as a result
@@ -932,7 +1051,7 @@ free parameters to fit the experimental refractive spectra (Section
 \end{figure}
 
 For the Fig. \ref{fig:MCGRIN4} shows the SEM cross-sectional images of
-the PSi samples used in this work. Relatively small interface
+the PS samples used in this work. Relatively small interface
 roughness and a clear contrast between the high and low porosity of
 the microcavity measured at different points (A, B and C), showing the
 change in thickness in each of these. The measured thicknesses of the
