Hice los cambios y modificaciones de la celda, los estilo de letra de los pie de imagenas

--- a/paper.tex
+++ b/paper.tex
@@ -159,7 +159,7 @@ but for a small area near its tip, which we thus approximate as a
 point current source.
 \begin{figure}
   \centering
-  \includegraphics[scale=.4]{Images/celdan}
+  \includegraphics[width=\textwidth]{Images/celdan1}
   \caption{Prism shaped electrolytic cell with a rectangular base of
     sides $a$, $b$ filled with electrolyte up to a height $c$. The
     walls of the cell are insulating and the bottom is completely
@@ -237,7 +237,7 @@ and
 E_{_{x}}(0, y ,z)= E_{_{x}}(a, y ,z)=E_{{_y}}(x, 0 ,z)=E_{{_y}}(x, b
 ,z)=E_{{_z}}(x, y ,c)=0.
 \end{equation}
-This problem may be solved readily using image charge theory
+This problem may be solved readily using image charge theory \cite{T1,T2}
 \notaL{ref}. The potential within the electrolytic cell coincides the
 the field within an infinite vacuum containing the point charge
 $q_0$ at the tip of the electrode at $\bm r_0$, and an array of its fictitious image
@@ -352,12 +352,12 @@ At a height $ 0 <z <z_0 $ I simplify
 If the surface of the liquid is at a finite height c, then we can use images, like:
 \begin{figure}
   \centering
-  \includegraphics[scale=.6]{Images/celd1}
-  \caption{\emph{Diagram shows that there is a positive (real) plane $
+  \includegraphics[width=\textwidth]{Images/celd1}
+  \caption{Diagram shows that there is a positive (real) plane $
       z_0 $, a negative image at $ -z_0 $ below the conductor ($ z = 0
       $) and its images are a positive plate at $ 2c-z_0 $ and a
       negative plate at $ 2c + z_0 $, the image is repeated vertically
-      with the period $ L_z = 4c $}}
+      with the period $ L_z = 4c $}
   \label{fig:Celda1}
 \end{figure}
 In Fig. \ref{fig:Celda1} it is observed that there is a positive
@@ -522,8 +522,8 @@ T=\frac{\eta_m}{\eta_0}|t|^{2}
 \section{Experimental Details}
 \begin{figure}
   \centering
-  \includegraphics[scale=0.6]{Images/DE1}
-\caption{\emph{Schematic of the experimental set-up for
+  \includegraphics[width=\textwidth]{Images/DE1}
+\caption{Schematic of the experimental set-up for
       fabrication of porous silicon with GRIN. (a) Represents an
       outline of the surface section, divided by three regions
       A, B and C, corresponding to High, Medium and Low Porosity
@@ -533,7 +533,7 @@ T=\frac{\eta_m}{\eta_0}|t|^{2}
       connection of the circuit with the cathode and anode. (c)
       It is a schematic drawing of the Cross section of the
       electrochemically attacked porous silicon seen in three
-      different regions as mentioned above. }}
+      different regions as mentioned above. }
     \label{fig:DE1}
   \end{figure}
 
@@ -665,7 +665,7 @@ field; the equation is expressed as follows:
  current density for each measurement point.
 
 \section{Discussion and Results}
-\subsection{Simulation of the EMPCGRIN model}
+\subsection{Simulation of  the current density}
  To test the developed  idea in the theoretical section, we find a
  relation of the tip of the counter electrode that acts similarly as a
  point charge and the current density for a geometry in an
@@ -674,8 +674,8 @@ field; the equation is expressed as follows:
  crystals with a refractive index with gradient (EMPCGRIN).
 \begin{figure}
   \centering
-  \includegraphics[scale=0.7]{Images/G123}
-  \caption{\emph{ Simulation to calculate the current density in
+  \includegraphics[width=\textwidth]{Images/G123}
+  \caption{Simulation to calculate the current density in
       a structure with gradient refractive index (GRIN) produced
       by electrochemical attack on crystalline silicon to
       produce porous silicon (PS), with a current density
@@ -683,7 +683,7 @@ field; the equation is expressed as follows:
       current $ I (mA) $, we have $ J / I \sim 0.5 \ \ a \ \ 1.2
       (cm^{-2}) $, for a cell of $ a = 2.03 \ \ cm $ y $ b =
       0.62 \ \ cm $, with an electrode height $ Z_0 = 0.96 \ \
-      cm $} Eq. (\ref{Eq:J})}.
+      cm $ Eq. (\ref{Eq:J})}.
   \label{fig:DR1}
 \end{figure}
 We consider Fig. \ref{fig:DR1} which come from solving
@@ -713,15 +713,15 @@ the attack would be and the formal side of the pores in the silicon.
 \subsection{Monolayers GRIN Porous Silicon }
 \begin{figure}
 	\centering
-	\includegraphics[scale=.3]{Images/celdan2}
-	\caption{\emph{ Mechanical 3D modeling, design of the
+	\includegraphics[width=\textwidth]{Images/celdan2}
+	\caption{Mechanical 3D modeling, design of the
             electrochemical cell where we can see the shape of a prism
             giving the required and necessary data for the
             experiments. The design of the cell used is $ 1,206 \ \ cm
             ^ 2 $ (this is the area attacked in the process), the area
             attacked is rectangular ($ 0.62 \ \ cm \times 2.03 \ \ cm
             $) and a height ( $ 1.2 \ \ cm $) a) Complete cell b) Cell
-            without top cover and c) Top view}}
+            without top cover and c) Top view}
 	\label{fig:por1}
 \end{figure}
 We can see in Fig. \ref{fig:por1}, 3D modeling the mechanical design
@@ -734,8 +734,8 @@ rectangular ($ 0.62 \ \ cm \times 2.03 \ \ cm $) and a height ( $ 1.2
 all the needs that this required.
 \begin{figure}
   \centering
-  \includegraphics[scale=.5]{Images/SPgrin51}
-  \caption{\emph{a) Silicon sample attacked with an electrolytic
+  \includegraphics[width=\textwidth]{Images/SPgrin51}
+  \caption{a) Silicon sample attacked with an electrolytic
       mixture of aqueous hydrofluoric acid (HF) (concentration:
       48 $ \% $  wt), glycerol (purity: 99.8 $ \% $  wt) and
       ethanol (purity: 99.9 $ \% $  wt ) in 3: 7: 1 volume
@@ -750,7 +750,7 @@ all the needs that this required.
       complex porous silicon GRIN, where we calculate the real
       and imaginary part by means of the equation
       \ref{Eq:Brugg}. for different porosities at each point, A
-      (P = 0.44), B (P = 0.42) and C (P = 0.40) } }
+      (P = 0.44), B (P = 0.42) and C (P = 0.40) }
   \label{fig:DR3}
 \end{figure}
  The Fig. \ref{fig:DR3} a) three locations at different points are
@@ -791,15 +791,15 @@ all the needs that this required.
  can be controlled from the lateral current density.
 \begin{figure}
   \centering
-  \includegraphics[scale=.5]{Images/semD11}
-  \caption{\emph{Characterization of a monolayer of PS GRIN G1
+  \includegraphics[width=\textwidth]{Images/semD11}
+  \caption{Characterization of a monolayer of PS GRIN G1
       with an initial current of $ 5 \ \ mA $, seeing the
       morphology and depth of the cross section of several SEM
       micrographs, at different points, $ A (0.3 \ \ cm) $ and $
       B (0.8 \ \ cm) $ and $ C (1.7 \ \ cm) $. We can see the
       sample size for each measurement point, the depth $ d (A)
       = 1320 \ \ nm $, $ d (B) = 997 \ \ nm $ and $ d (C) = 605
-      \ \ nm $ } }
+      \ \ nm $ }
   \label{fig:DR4}
 \end{figure}
 In the Fig. \ref{fig:DR4} shows the cross section views   at points $
@@ -820,8 +820,8 @@ current density based on the position of the sample and the depth,
 seen in the SEM micrographs.
  \begin{figure}
    \centering
-   \includegraphics[scale=.7]{Images/grinJDR}
-   \caption{\emph{a) It is the relation of the current density $
+   \includegraphics[width=\textwidth]{Images/grinJDR}
+   \caption{a) It is the relation of the current density $
        J (mA / cm ^ 2) $ normalized with the electric current $ I
        (mA) $, we have $ J / I \ sim 1.2 \ \ a \ \ 0.5 ( cm^{-2})
        $, when we apply it to two samples $ G1 (I = 5 \ \ mA) $
@@ -833,7 +833,7 @@ seen in the SEM micrographs.
        0.8 \ \ cm) $ y $ C (1.7 \ \ cm)) $ taken in SEM
        micrographs $ d (J_i) (nm) $ and attack times $ G1 (t =
        600 \ \ s) $ y $ G2 (t = 200 \ \ s) $, depending on the
-       axis $ a $ $ (0.1 ... 2.0 \ \ cm) $ } }
+       axis $ a $ $ (0.1 ... 2.0 \ \ cm) $ }
    \label{fig:JDR}
  \end{figure}
 In Fig. \ref{fig:JDR} a) It is the relation of the current density $ J
@@ -851,12 +851,12 @@ s) $ and $ G2 (t = 200 \ \ s) $, depending on the axis $ a $ $ (0.1
 ... 2.0 \ \ cm) $.
 \begin{figure}
   \centering
-  \includegraphics[scale=.6]{Images/grinJD31}
-  \caption{\emph{The relationship of samples $ G1 (I = 5 mA) $ and $
+  \includegraphics[width=\textwidth]{Images/grinJD31}
+  \caption{The relationship of samples $ G1 (I = 5 mA) $ and $
       G2 (I = 40 mA) $ were obtained to find: a) Attack speed with
       current density for each point and b) Porosity as a function of
       density current. With this we have the calibration curves for
-      the manufacture of any GRIN porous silicon structure   } }
+      the manufacture of any GRIN porous silicon structure   }
   \label{fig:Indr1}
 \end{figure}
 Fig. \ref{fig:Indr1} a) explicitly explain the relationships that
@@ -895,8 +895,8 @@ for each of the chosen currents.
 \subsection{GRIN Porous Silicon Microcavities}
  \begin{figure}
 	\centering
-	\includegraphics[scale=0.4]{Images/MicrGrin}
-	\caption{\emph{Diagram of a microcavity of porous silicon
+	\includegraphics[width=\textwidth]{Images/MicrGrin}
+	\caption{Diagram of a microcavity of porous silicon
             GRIN. Alternate layers are obtained of high (H) refractive
             index $n_{_{Hi}}$ and low (L) refractive index
             $n_{_{Li}}$, where $N_{_{H}}$ is the number of layers for
@@ -909,7 +909,7 @@ for each of the chosen currents.
             defining a i = $ A, B, C$. Having the following
             relationship $d_{_{i}} =
             (N_{_{Hi}}d_{_{Hi}})+(N_{_{Li}}d_{_{Li}}) +
-            (2d_{_{Hi}})$. }}
+            (2d_{_{Hi}})$. }
 	\label{fig:MCGRIN0}
 \end{figure}
 The Fig. \ref{fig:MCGRIN0} the scheme of  a initially proposed lateral
@@ -938,8 +938,8 @@ for the point $ 0 $ which is located at one end of the sample just
 below the tip counter-electrode.
 \begin{figure}
   \centering
-  \includegraphics[scale=.5]{Images/MCGRIN2}
-  \caption{\emph{a) Three locations at different points are
+  \includegraphics[width=\textwidth]{Images/MCGRIN2}
+  \caption{a) Three locations at different points are
       considered, denoted as follows, $ A (0.3 \ \ cm) $ and $ B
       (0.8 \ \ cm) $ and $ C (1.2 \ \ cm) $, from the PSMCGRIN
       sample $ GMC $. b) We have the reflectance measurements to
@@ -949,7 +949,7 @@ below the tip counter-electrode.
       consistent with the simulation and the experiment, we
       found the refractive indices and the porosities as a
       function of the current density at each measurement point,
-      see Table \ref{tabla:1}. }}
+      see Table \ref{tabla:1}. }
   \label{fig:MCGRIN3}
 \end{figure}
 
@@ -1011,8 +1011,8 @@ free parameters to fit the experimental refractive spectra (Section
 4.2).
  \begin{figure}
    \centering
-   \includegraphics[scale=.5]{Images/MCGRINSEM}
-   \caption{\emph{SEM image of the cross section profile of the
+   \includegraphics[width=\textwidth]{Images/MCGRINSEM}
+   \caption{SEM image of the cross section profile of the
        microcavities with GRIN. The measured thicknesses of the
        complete multi-film structures showed good agreement with the
        simulations taken from $ V = 0.53J ^ {0.79} $ where $d_j=Vt_j$
@@ -1023,7 +1023,7 @@ free parameters to fit the experimental refractive spectra (Section
        defining $ i = $ A, B, C. Which resulted in (measured /
        simulation) $ 2.25 / 2.31 \ \ \mu m $ (for structure at Point
        A), $ 2.17 / 2.08 \ \ \mu m $ (for structure at point B) and $
-       1.87 / 1.65 \ \ \mu m $ (for structure at point C)}}
+       1.87 / 1.65 \ \ \mu m $ (for structure at point C)}
 	\label{fig:MCGRIN4}
 \end{figure}
 
@@ -1172,6 +1172,15 @@ of our experiment.
   P. V. (2017).\textquotedblleft \emph{Tunable visibly transparent
     optics derived from porous silicon.}\textquotedblright ACS
   Photonics, 4(4), 909-914.
+  
+   
+  \bibitem{T1}Jackson, John David. \textquotedblleft 
+  \emph{Classical electrodynamics.}\textquotedblright (1999): 841-842.
+  
+\bibitem{T2}Griffiths, David J. \textquotedblleft 
+\emph{Introduction to electrodynamics.}\textquotedblright 
+ New Jersey: Prentice Hall, 1962.  
+  
 \bibitem{I17} Dariani RS, Ebrahimnasab S (2014). \textquotedblleft
   \emph{Root Mean Square Roughness of Nano Porous Silicon by
     Scattering Spectra.}\textquotedblright The
@@ -1186,7 +1195,8 @@ of our experiment.
     Optical Measurements.}\textquotedblright Thin Solid Films 297:
   114?117.
 
-\bibitem{I20} Thei, W. \textquotedblleft \emph{Optical Properties of porous silicon.}\textquotedblright Surf. Sci. Rep. 1997, 29, 91?93.
+\bibitem{I20} Thei, W. \textquotedblleft \emph{Optical Properties of porous silicon.}
+\textquotedblright Surf. Sci. Rep. 1997, 29, 91?93.
 \bibitem{I21} Van Groesen, E.; Sopaheluwakan, A.; Andonowati,
   A. \textquotedblleft  \emph{Direct characterization of states and
     modes in defect grating structures.}\textquotedblright
