Add a couple of notes

--- a/paper.tex
+++ b/paper.tex
@@ -429,11 +429,16 @@ Integrating over the surface of the sample we verify
 as the contributions of opposite non-null reciprocal vectors cancel
 out. As expected, all of the current that leaves the electrode find
 its way to the substrate.
+\notaL{En este sistema, ¿cuál es el cátodo y cuál el ánodo? ¿de dónde
+  hacia dónde va la corriente? ¿$q_0$ es positiva o negativa?}
 
 Using Eq. \eqref{Eq:J} we can correlate the local current density at
 the sample as it is prepared with its geometric and optical
 properties. For the calculation of the optical properties we use the
 well known transfer matrix method \notaL{refs}.
+\notaL{No necesitamos presentar la teoría de matrices de
+  transferencia. No hay nada original ahí.}
+
 
 \section{Experimental Details}
 \begin{figure}
